--- a/pinyougou-web/pinyougou-cart-web/src/main/webapp/letOthersPay.html
+++ b/pinyougou-web/pinyougou-cart-web/src/main/webapp/letOthersPay.html
@@ -146,7 +146,7 @@
 						<span><em>已节省：</em><i>-¥20.00</i></span>
 					</div>
 					<div class="sumbtn">
-						<input type="button" class="sum-btn" ng-click="pushIds()" target="_blank" value="结算">
+						<input type="button" class="sum-btn" ng-click="letOthers2Pay()" target="_blank" value="让舔狗付款">
 					</div>
 				</div>
 			</div>
