--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/home-person-footmark.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/home-person-footmark.html
@@ -177,7 +177,11 @@ $(function(){
 							<dd><a href="home-person-footmark.html" class="list-active">我的足迹</a></dd>
 						</dl>
 						<dl>
-							<dt><i>·</i> 物流消息</dt>
+							<dl>
+								<dt><i>·</i> 舔狗中心</dt>
+								<dd><a href="be-a-licker.html">我是舔狗</a></dd>
+								<dd><a href="my-licker.html">我的舔狗</a></dd>
+							</dl>
 						</dl>
 						<dl>
 							<dt><i>·</i> 设置</dt>
