--- a/pinyougou-web/pinyougou-shop-web/src/main/webapp/admin/password.html
+++ b/pinyougou-web/pinyougou-shop-web/src/main/webapp/admin/password.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="/css/style.css">
 	<script src="/plugins/jQuery/jquery-2.2.3.min.js"></script>
     <script src="/plugins/bootstrap/js/bootstrap.min.js"></script>
-   
+
+	<script src="/plugins/angularjs/angular.min.js"></script>
+	<script src="/js/base.js"></script>
+	<script src="/js/service/baseService.js"></script>
+	<script src="/js/controller/baseController.js"></script>
+	<script src="/js/controller/sellerController.js"></script>
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" >
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="sellerController">
 
 	<!-- 正文区域 -->
 	<section class="content">
