--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/my-licker.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/my-licker.html
@@ -9,8 +9,14 @@
     
 	<link rel="stylesheet" type="text/css" href="css/pages-seckillOrder.css"/>
 
+	<script src="/plugins/angularjs/angular.min.js"></script>
+	<script src="/js/base.js"></script>
+	<script src="/js/service/baseService.js"></script>
+	<script src="/js/controller/indexController.js"></script>
+	<script src="/js/controller/lickedController.js"></script>
+
 </head>
-<body>
+<body ng-app="pinyougou" ng-controller="lickedController" ng-init="showLoginName();findAllApplication()">
     <!-- 头部栏位 -->
     <!--页面顶部-->
 <div id="nav-bottom">
@@ -20,8 +26,13 @@
 			<div class="py-container">
 				<div class="shortcut">
 					<ul class="fl">
-						<li class="f-item">品优购欢迎您！</li>
-						<li class="f-item">请<a href="login.html" target="_blank">登录</a>　<span><a href="register.html" target="_blank">免费注册</a></span></li>
+						<li class="f-item" ng-if="loginName"><span style="color: red;"><b>{{loginName}}</b></span>&nbsp;,品优购欢迎您！&nbsp;
+							<a href="/logout/cas">退出</a></li>
+						<li class="f-item" ng-if="!loginName">请
+							<a href="http://sso.pinyougou.com/cas/login">登录</a>
+							<span>
+						<a href="http://user.pinyougou.com/register.html">免费注册</a>
+						</span></li>
 					</ul>
 					<ul class="fr">
 						<li class="f-item">我的订单</li>
@@ -186,13 +197,13 @@ $(function(){
 							<dl>
 								<dt><i>·</i> 舔狗中心</dt>
 								<dd><a href="be-a-licker.html">我是舔狗</a></dd>
-								<dd><a href="my-licker.html">我的舔狗</a></dd>
+								<dd><a href="my-licker.html" class="list-active">我的舔狗</a></dd>
 							</dl>
 						</dl>
 						<dl>
 							<dt><i>·</i> 设置</dt>
 							<dd><a href="home-setting-info.html" >个人信息</a></dd>
-							<dd><a href="home-setting-address.html" class="list-active" >地址管理</a></dd>
+							<dd><a href="home-setting-address.html">地址管理</a></dd>
 							<dd><a href="home-setting-safe.html" >安全管理</a></dd>
 						</dl>
                     </div>
@@ -201,45 +212,46 @@ $(function(){
                 <div class="yui3-u-5-6">
                     <div class="body userAddress">
                         <div class="address-title">
-                            <span class="title">地址管理</span>
-                            <a data-toggle="modal" data-target=".edit" data-keyboard="false"   class="sui-btn  btn-info add-new">添加新地址</a>
+                            <span class="title">舔狗管理</span>
+                            <a data-toggle="modal" data-target=".edit" data-keyboard="false" class="sui-btn  btn-info add-new"></a>
                             <span class="clearfix"></span>
                         </div>
-                        <div class="address-detail">
+                        <div class="address-detail" ng-if="myLicker">
                             <table class="sui-table table-bordered">
                                 <thead>
                                     <tr>
-                                        <th>姓名</th>
-                                        <th>地址</th>
-                                        <th>联系电话</th>
+                                        <th>舔狗账号</th>
+                                        <th>让他买</th>
                                         <th>操作</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>刘田田</td>
-                                        <td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>
-                                        <td>1774***********4</td>
-                                        <td>
-                                            <a href="#">编辑</a>
-                                            <a href="#">删除</a>
-                                            默认地址
-                                        </td>
+                                        <td>{{myLicker}}</td>
+                                        <td><a href="http://cart.pinyougou.com/letOthersPay.html">去选择商品</a></td>
+                                        <td><button ng-click="deleteLicker(myLicker)">删除舔狗</button></td>
                                     </tr>
-                                    <tr>
-                                        <td>沈沉</td>
-                                        <td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>
-                                        <td>1774***********4</td>
-                                        <td>
-                                            <a href="#">编辑</a>
-                                            <a href="#">删除</a>
-                                            <a href="#">设为默认</a>
-                                        </td>
-                                    </tr>
-                                    
                                 </tbody>
                             </table>                          
                         </div>
+						<div class="address-detail" ng-if="!myLicker">
+							<table class="sui-table table-bordered">
+								<thead>
+								<tr>
+									<th>舔狗账号</th>
+									<th>操作</th>
+									<th>操作</th>
+								</tr>
+								</thead>
+								<tbody>
+								<tr ng-repeat="application in applicationList">
+									<td>{{application}}</td>
+									<td><button ng-click="acceptLicker(application)">同意让他当舔狗</button></td>
+									<td><button ng-click="refuseLicker(application)">拒绝他的舔狗请求</button></td>
+								</tr>
+								</tbody>
+							</table>
+						</div>
                         <!--新增地址弹出层-->
                          <div  tabindex="-1" role="dialog" data-hasfoot="false" class="sui-modal hide fade edit" style="width:580px;">
                             <div class="modal-dialog">
