day02 舔狗模块整体完成

--- a/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/payfail.html
+++ b/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/payfail.html
@@ -15,7 +15,7 @@
 		<script src="/js/controller/orderController.js"></script>
 	</head>
 
-	<body ng-app="pinyougou" ng-controller="orderController">
+	<body ng-app="pinyougou" ng-controller="orderController" ng-init="showLoginName()">
 		<!--head-->
 		<div class="top">
 			<div class="py-container">
