--- a/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/paysuccess.html
+++ b/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/paysuccess.html
@@ -23,7 +23,7 @@
             });
 		</script>
 	</head>
-	<body ng-app="pinyougou" ng-controller="orderController">
+	<body ng-app="pinyougou" ng-controller="orderController" ng-init="showLoginName()">
 		<!--head-->
 		<div class="top">
 			<div class="py-container">
