--- a/pinyougou-web/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-web/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -82,7 +82,7 @@
 								
 								<div class="col-md-2 title">商品名称</div>
 								<div class="col-md-10 data">
-									<input type="text" ng-model="goods.goodsName" class="form-control" placeholder="商品名称"
+									<input type="text" ng-model="goods.goodsName" class="form-control" placeholder="具体di'z"
 										value="">
 								</div>
 	
