舔狗模块第一次试验成功

--- a/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/pay.html
+++ b/pinyougou-web/pinyougou-cart-web/src/main/webapp/order/pay.html
@@ -20,7 +20,7 @@
 	</head>
 	<body ng-app="pinyougou"
 		  ng-controller="orderController"
-		  ng-init="genPayCode();">
+		  ng-init="showLoginName();genPayCode()">
 		<!--head-->
 		<div class="top">
 			<div class="py-container">
