--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/be-a-licker.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/be-a-licker.html
@@ -37,7 +37,7 @@
 					<ul class="fr">
 						<li class="f-item">我的订单</li>
 						<li class="f-item space"></li>
-						<li class="f-item"><a href="home.html" target="_blank">我的品优购</a></li>
+						<li class="f-item"><a href="http://user.pinyougou.com/" target="_blank">我的品优购</a></li>
 						<li class="f-item space"></li>
 						<li class="f-item">品优购会员</li>
 						<li class="f-item space"></li>
@@ -223,6 +223,7 @@ $(function(){
                                         <th>账号</th>
                                         <th>去帮TA清空购物车</th>
                                         <th>我不想当TA的舔狗了</th>
+                                        <th>你还是个人吗</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -230,6 +231,7 @@ $(function(){
                                         <td>{{licked}}</td>
                                         <td><a href="http://cart.pinyougou.com/cartOfLicked.html?lickedId={{licked}}">去当舔狗</a></td>
                                         <td><button ng-click="beAMan(licked)">做个人吧</button></td>
+                                        <td><a href="/historyOfLick.html?lickedId={{licked}}">舔狗历史</a></td>
                                     </tr>
                                 </tbody>
                             </table>                          
@@ -239,7 +241,7 @@ $(function(){
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <button type="button" data-dismiss="modal" aria-hidden="true" class="sui-close">×</button>
+                                        <button type="button" ng-click="preLicked={}" data-dismiss="modal" aria-hidden="true" class="sui-close">×</button>
                                         <h4 id="myModalLabel" class="modal-title">新增清空购物车对象</h4>
                                     </div>
                                     <div class="modal-body">
