添加第二次注释 舔狗模块消息系统完成

--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/be-a-licker.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/be-a-licker.html
@@ -16,7 +16,7 @@
 	<script src="/js/controller/lickerController.js"></script>
 
 </head>
-<body ng-app="pinyougou" ng-controller="lickerController" ng-init="showLoginName();findLickeds()">
+<body ng-app="pinyougou" ng-controller="lickerController" ng-init="showLoginName();findLickeds();getLickerMsg()">
     <!-- 头部栏位 -->
     <!--页面顶部-->
 <div id="nav-bottom">
