--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/my-licker.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/my-licker.html
@@ -16,7 +16,7 @@
 	<script src="/js/controller/lickedController.js"></script>
 
 </head>
-<body ng-app="pinyougou" ng-controller="lickedController" ng-init="showLoginName();findAllApplication()">
+<body ng-app="pinyougou" ng-controller="lickedController" ng-init="showLoginName();findAllApplication();getLickedMsg()">
     <!-- 头部栏位 -->
     <!--页面顶部-->
 <div id="nav-bottom">
@@ -210,6 +210,7 @@ $(function(){
 						</dl>
                     </div>
                 </div>
+
                 <!--右侧主内容-->
                 <div class="yui3-u-5-6">
                     <div class="body userAddress">
