--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/home-setting-info.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/home-setting-info.html
@@ -183,7 +183,8 @@ $(function(){
                 <div class="yui3-u-1-6 list">
 
                     <div class="person-info">
-                        <div class="person-photo"><img  width="50" height="50" src="{{user.headPic?user.headPic:'img/_/photo_icon.png'}}" alt=""></div>
+                        <div class="person-photo">
+							<img  width="50" height="50"  src="{{user.headPic?user.headPic:'img/_/photo_icon.png'}}" alt=""></div>
                         <div class="person-account">
                             <span class="name">{{loginName}}</span>
                             <span class="safe">账户安全</span>
@@ -279,7 +280,6 @@ $(function(){
 														</select>
 													</td>
 												</tr>
-													{{provinces}}
 												</table>
                                             </div>
                                         </div>
@@ -298,7 +298,6 @@ $(function(){
                                             </span>
                                         </div>
                                     </div>
-									{{user}}
                                     <div class="control-group">
                                         <label for="sanwei" class="control-label"></label>
                                         <div class="controls">
