--- a/pinyougou-web/pinyougou-user-web/src/main/webapp/home-setting-safe.html
+++ b/pinyougou-web/pinyougou-user-web/src/main/webapp/home-setting-safe.html
@@ -286,7 +286,7 @@ $(function(){
                 <div class="yui3-u-1-6 list">
 
                     <div class="person-info">
-                        <div class="person-photo"><img src="{{url}}" alt=""></div>
+                        <div class="person-photo"><img src="{{user.headPic?user.headPic:'img/_/photo_icon.png'}}" alt=""></div>
                         <div class="person-account">
                             <span class="name">{{loginName}}</span>
                             <span class="safe">账户安全</span>
